<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/light_blue"
    tools:context="com.jacobmosehansen.h1jacob_201270410.AddressInputActivity">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tableLayout"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:selectAllOnFocus="true"
                    android:ems="10"
                    android:text="@string/road_name_input_et_activity_address_input"
                    android:id="@+id/road_name"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:selectAllOnFocus="true"
                    android:text="@string/house_number_input_et_activity_address_input"
                    android:ems="10"
                    android:id="@+id/house_number"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:selectAllOnFocus="true"
                    android:text="@string/city_name_et_activity_address_input"
                    android:ems="10"
                    android:id="@+id/city_name"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:selectAllOnFocus="true"
                    android:text="@string/post_code_input_et_activity_address_input"
                    android:ems="10"
                    android:id="@+id/post_code"
                    android:layout_column="1" />
            </TableRow>

        </TableLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept_address_details_btn_activity_address_input"
            android:id="@+id/accept_address_details_btn_address_input"
            android:layout_marginTop="25dp"
            android:background="@color/dark_blue"
            android:layout_below="@+id/tableLayout"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_back_activity_address_input"
            android:id="@+id/btn_back_activity_address_input"
            android:background="@color/dark_blue"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_enterDetails_activity_address_input"
        android:id="@+id/textView"
        android:layout_marginBottom="25dp"
        android:layout_above="@+id/tableLayout"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
